[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "jwtpeek"
version = "1.0.0"
description = "🔍 Beautiful JWT token inspector for your terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "nadonghuang" }
]
keywords = ["jwt", "token", "decode", "inspect", "cli", "terminal", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Introspection :: Decode JWT",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.scripts]
jwtpeek = "jwtpeek:main"

[project.urls]
Homepage = "https://github.com/nadonghuang/jwtpeek"
